chore: `actions/checkout` 실행 위치 변경

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -7,6 +7,11 @@ jobs:
     name: Check lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
@@ -20,6 +25,11 @@ jobs:
     name: Check types
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
@@ -33,6 +43,11 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
