--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "tailwindcss": "^4.1.1",
-    "vite-plugin-svgr": "^4.3.0"
+    "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -44,7 +43,6 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
     "vitest": "^3.1.1"
   }
 }
