--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -34,15 +34,12 @@
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.21.0",
+    "eslint-config-next": "^15.3.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
     "vitest": "^3.1.1"
   }
 }
