--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.1",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
-    "tailwindcss": "^4.1.1"
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -39,6 +38,7 @@
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "vitest": "^3.1.1"
   }
