chore: TypeScript 환경설정 `@public` 별칭 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       }
     ],
     "paths": {
+      "@public": ["../public"],
       "@assets/*": ["assets/*"],
       "@components": ["components"],
       "@types": ["types"]
