chore: TypeScript 환경설정 `@public` 경로 별칭 제거

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
       }
     ],
     "paths": {
-      "@public": ["../public"],
-      "@assets/*": ["assets/*"],
+      "@assets": ["assets"],
       "@components": ["components"],
       "@types": ["types"]
     }
