chore: `Prettier` import 순서 업데이트

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,12 @@
   "arrowParens": "avoid",
   "importOrder": [
     "^react(.*)$",
-    "^vite(.*)$",
+    "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
     "(.css)$",
+    "^@assets",
+    "^@types",
+    "^@components",
     "^[./]"
   ],
   "importOrderSeparation": true,
