--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "next": "^15.3.0",
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
