--- a/.prettierrc
+++ b/.prettierrc
@@ -2,14 +2,16 @@
   "singleQuote": true,
   "arrowParens": "avoid",
   "importOrder": [
+    "^@storybook(.*)$",
     "^react(.*)$",
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
-    "(.css)$",
+    "fonts$",
     "^@assets",
     "^@types",
     "^@components",
-    "^[./]"
+    "^[./]",
+    "(.css)$"
   ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
