chore: `Prettier` 환경설정 import 순서 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "arrowParens": "avoid",
   "importOrder": [
     "^@storybook(.*)$",
+    "^vitest",
     "^react(.*)$",
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
