--- a/.github/workflows/draft-deploy.yml
+++ b/.github/workflows/draft-deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ['main']
 
+permissions:
+  actions: read
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
