--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,12 @@
       }
     ],
     "paths": {
-      "@assets": ["assets"],
-      "@components": ["components"],
-      "@types": ["types"]
+      "assets": ["assets"],
+      "assets/*": ["assets/*"],
+      "components": ["components"],
+      "components/*": ["components/*"],
+      "types": ["types"],
+      "types/*": ["types/*"]
     }
   },
   "include": [
