chore: `Prettier` 참조 경로 별칭 업데이트 적용

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,9 +8,9 @@
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
     "fonts$",
-    "^@assets",
-    "^@types",
-    "^@components",
+    "^assets",
+    "^types",
+    "^components",
     "^[./]",
     "(.css)$"
   ],
