chore: TypeScript 환경설정 `layouts` 경로 별칭 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "assets/*": ["assets/*"],
       "components": ["components"],
       "components/*": ["components/*"],
+      "layouts": ["layouts"],
       "types": ["types"],
       "types/*": ["types/*"]
     }
