--- a/.prettierrc
+++ b/.prettierrc
@@ -8,9 +8,10 @@
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
     "fonts$",
-    "^@assets",
-    "^@types",
-    "^@components",
+    "^assets",
+    "^types",
+    "^layouts",
+    "^components",
     "^[./]",
     "(.css)$"
   ],
