chore: 오류 수정을 위한 디버깅 작업 추가

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -9,6 +9,14 @@ runs:
       with:
         node-version: 20
 
+    - name: Fresh install
+      run: npm install
+      shell: bash
+
+    - name: Debug yaml
+      run: npm ls yaml || true
+      shell: bash
+
     - name: Install dependencies
       run: npm ci
       shell: bash
