--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1"
   },
+  "overrides": {
+    "yaml": "^2.7.1"
+  },
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
