--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Storybook Deployment
+name: Deployment
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - main
 
 permissions:
+  actions: read
   contents: write
   pull-requests: write
 
@@ -54,3 +55,35 @@ jobs:
               repo: context.repo.repo,
               body: ':rocket: storybook: ${{ steps.chromatic.outputs.storybookUrl }}'
             });
+
+  deploy-draft:
+    name: Deploy Draft
+    runs-on: ubuntu-latest
+    container: pandoc/latex
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install mustache (to update the date)
+        run: apk add ruby && gem install mustache
+
+      - name: creates output
+        run: sh ./build.sh
+
+      - name: Pushes to another repository
+        id: push_directory
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.GH_TOKEN }}
+        with:
+          source-directory: 'output'
+          destination-github-username: herokwon
+          destination-repository-name: inu-software-design-team-draft
+          user-email: ${{ secrets.EMAIL }}
+          commit-message: ${{ github.event.commits[0].message }}
+          target-branch: main
+
+      - name: Test get variable exported by push-to-another-repository
+        run: echo $DESTINATION_CLONED_DIRECTORY
