chore: Prettier 환경설정 `@testing-library` 관련 참조 순서 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "importOrder": [
     "^@storybook(.*)$",
     "^vitest",
+    "^@testing-library",
     "^react(.*)$",
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
