feat: 학생 목록 표시 및 검색 기능 구현 (#39)
* chore: TypeScript 환경설정 `features` 경로 별칭 추가

* chore: Prettier 환경설정 `features` 참조 순서 추가

* chore: ESLint 환경설정 `features` 참조 규칙 추가

* chore: `es-toolkit` 의존성 추가 (feat. debounce)

* feat(students): 학생 목록 표시 및 검색 기능 구현

* refactor(SideNav): 페이지 이동 시 query string 유지를 위한 업데이트

* style(globals.css): `var` 오타 수정

* design(layout): grid 행 배치 스타일 단위 변경

* design(IconButton): 테두리 스타일 구현 방식 변경 (border → shadow)

* chore: Prettier 환경설정 `@testing-library` 관련 참조 순서 추가

* chore: ESLint 환경설정 `no-restricted-imports` 규칙에 하위 디렉토리 제외 패턴 추가

* chore: `/dashboard` 경로에 대한 query string 설정 차단

* test(setup): `useSearchParams` 모킹 추가

* test(StudentList): 학생 목록 표시 및 검색 기능 테스트 추가

* style(middleware): 조건문 간소화

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "importOrder": [
     "^@storybook(.*)$",
     "^vitest",
+    "^@testing-library",
     "^react(.*)$",
     "^next(.*)$",
     "<THIRD_PARTY_MODULES>",
@@ -12,6 +13,7 @@
     "^data",
     "^types",
     "^layouts",
+    "^features",
     "^components",
     "^[./]",
     "(.css)$"
