--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.12",
     "tailwindcss": "^4.1.4",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "~5.8.3",
     "vite-plugin-svgr": "^4.3.0",
