--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "generate-icons": "tsx ./src/generate-icons.ts",
+    "dev": "npm run generate-icons && next dev --turbopack",
+    "build": "npm run generate-icons && next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
@@ -14,8 +15,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build --stats-json"
+    "storybook": "npm run generate-icons && storybook dev -p 6006",
+    "build-storybook": "npm run generate-icons && storybook build --stats-json"
   },
   "dependencies": {
     "es-toolkit": "^1.36.0",
