--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.12",
     "tailwindcss": "^4.1.4",
-    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "tsx": "^4.19.4",
     "typescript": "~5.8.3",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4",
