--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-storybook": "npm run generate-icons && storybook build --stats-json"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "es-toolkit": "^1.38.0",
     "next": "^15.3.2",
     "pretendard": "^1.3.9",
