--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,10 @@ name: CI/CD Docker
 on:
   push:
     branches:
-      - main # 기본 브랜치
+      - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
