--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "build-storybook": "npm run generate-icons && storybook build --stats-json"
   },
   "dependencies": {
+    "chart.js": "^4.4.9",
     "es-toolkit": "^1.38.0",
     "next": "^15.3.2",
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
