--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "build-storybook": "npm run generate-icons && storybook build --stats-json"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "es-toolkit": "^1.38.0",
+    "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
